k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
      - name: webhook
        image: europe-west1-docker.pkg.dev/devops-cert-labs/cloudbuild-images/webhook:latest
        ports:
        - containerPort: 8080
