k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: webhook-cert
spec:
  rules:
  - host: meganerenault16e.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook
            port:
              number: 8080
